@@ -1,3 +1,8 @@
+Sun Aug 18 19:32:36 2002  Nick Burrett  <nick@dsvr.net>
+
+	* string/swab.c: New file.
+	* unistd.h (swab): Add prototype.
+
 Sun Aug 18 16:15:25 2002  Nick Burrett  <nick@dsvr.net>
 
 	[ BUG 51 ]
